Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-118241

QMessageBox::button(QMessageBox::Close)->setText() does not work

XMLWordPrintable

    • macOS
    • 9df0571ff (12.0), 6b831a373 (12.0), 77dff1f5e (6.6), dc0313146 (tqtc/lts-6.5), 3a5c22c3c (12.0)

      QMessageBox::button(...)->setText(...) should work for native dialog too.

      The fact that we can call QMessageBox::addButton(text, role) (and it changes the text even for native dialogs) suggests that there is nothing technical keeping this from working.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vestbo Tor Arne Vestbø
            madwinter Marcus Tillmanns
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: